Bug Fixes
+ Fixed horizontal scroll on mobile

--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -13,8 +13,6 @@
       background-color: $primary;
     }
     .text {
-      font-family: "Montserrat";
-
       font-weight: 700;
       font-size: 20px;
       line-height: 28px;
